--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,3 +23,24 @@ body {
   position: relative;
   margin: auto;
 }
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('../public/Gilroy/Gilroy-Bold.ttf');
+  font-weight: 900;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('../public/Gilroy/Gilroy-Light.ttf');
+  font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('../public/Gilroy/Gilroy-Medium.ttf');
+  font-weight: 200;
+  font-display: swap;
+}
