--- a/components/Client/client.module.scss
+++ b/components/Client/client.module.scss
@@ -1,8 +1,34 @@
 .client{
+    margin: 50px;
     h1{
         text-align: center;
+        margin: 50px;
     }
     
+    .clientTitle{
+        
+        .clientHeading{
+            display: flex;
+            flex-direction:row;
+            justify-content: space-between;
+            position: relative;
+            bottom: 150px;
 
+            button {
+                display: flex;
+                justify-content: space-evenly;
+                padding: 16px 14px;
+                background: rgba(180, 33, 38, 0.1);
+                border-radius: 33px;
+                color: #B42126;
+                border: 1px;
+                width: 200px;
+                height: 50px;
+                margin-top: 50px;
+            }
+        }
+    }
+
+    
 
 }
