--- a/components/Advantage/advantage.module.scss
+++ b/components/Advantage/advantage.module.scss
@@ -16,7 +16,7 @@
             margin-bottom: 20px;
         }
         .advantageTitle {
-            padding: 0 10px;
+            // padding: 0 10px;
         }
     }
 }
