--- a/components/Sales/sales.module.scss
+++ b/components/Sales/sales.module.scss
@@ -1,46 +1,17 @@
-.sales {
-    display: grid;
-    grid-template: repeat(1, 1fr) / repeat(2, 1fr);
-    gap: 20px;
-    margin: 40px 30px;
-
-    .leftSide {
+.sales{
+    display: flex;
+    gap: 52px;
+    .leftSide{
         display: grid;
-        grid-template: repeat(2, 1fr) / repeat(3, 1fr);
-        margin-top: 50px;
+        grid-template-columns: repeat(3,1fr);
         gap: 10px;
 
-        .salesImg {
+        .salesImg{
+            background: #F4F5F8;
+            border-radius: 30px;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
             align-items: center;
-            width: 180px;
-            height: 180px;
-            border-radius: 20px;
-            background: hsl(225, 22%, 96%);
-            padding: 20px;
-        }
-    }
-
-    .rightSide {
-        display: grid;
-        gap: 10px;
-        font-size: 22px;
-        line-height: 35px;
-        margin-left: 10px;
-
-        button {
-            display: flex;
-            justify-content: center;
-            padding: 8px 14px;
-            gap: 7px;
-            background: rgba(180, 33, 38, 0.1);
-            border-radius: 33px;
-            color: #B42126;
-            border: 1px;
-            width: 200px;
-            margin-top: 15px;
+                    justify-content: center;
         }
     }
 }
