--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,6 +10,10 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: "Montserrat";
+
+
+
 }
 
 
@@ -22,4 +26,23 @@ body {
   max-width: 1200px;
   position: relative;
   margin: auto;
+}
+
+@font-face {
+  font-family: "Gilroy";
+  src: url("/public/font/Gilroy/Gilroy-Regular.woff2") format("woff2"),
+    url("/public/font/Gilroy/Gilroy-Regular.woff") format("woff"),
+    url("/public/font/Gilroy/Gilroy-Regular.ttf") format("ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Montserrat";
+  src: url("/Montserrat/Montserrat-Regular.woff2") format("woff2"),
+    url("/Montserrat/Montserrat-Regular.woff") format("woff"),
+    url("/Montserrat/Montserrat-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
