--- a/components/Hero/hero.module.scss
+++ b/components/Hero/hero.module.scss
@@ -22,21 +22,21 @@
         line-height: 69px;
         color: #263238;
       }
-        p{
-          margin: 15px 0 20px 0;
-        }    
+      p {
+        margin: 15px 0 20px 0;
+      }
 
-      .btnSignup{
-        background: #B42126;
-border-radius: 48px;
-font-weight: 600;
-font-size: 12px;
-line-height: 14px;
-text-transform: uppercase;
+      .btnSignup {
+        background: #b42126;
+        border-radius: 48px;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 14px;
+        text-transform: uppercase;
 
-color: #FFFFFF;
-border: none;
-padding: 12px 30px;
+        color: #ffffff;
+        border: none;
+        padding: 12px 30px;
       }
     }
   }
