--- a/components/Advantage/advantage.module.scss
+++ b/components/Advantage/advantage.module.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-template: repeat(2, 1fr)/ repeat(2, 1fr);
     gap: 20px;
-    margin: 20px;
+    margin: 20px 0;
     
     .advantageSquare {
         border-radius: 30px;
@@ -14,9 +14,21 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 20px;
+            .titile{
+                font-style: normal;
+font-weight: 600;
+font-size: 24px;
+line-height: 29px;
+color: #263238;
+            }
         }
         .advantageTitle {
-            // padding: 0 10px;
+            font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 150%;
+color: #263238;
+
         }
     }
 }
