--- a/components/Rating/rating.module.scss
+++ b/components/Rating/rating.module.scss
@@ -1,7 +1,7 @@
 .rating {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    margin: 40px 30px;
+    margin: 40px 0px;
     gap: 20px;
     
     .ratingType{
@@ -13,6 +13,12 @@
 
         .ratingName{
             margin-bottom: 30px;
+            font-style: normal;
+font-weight: 700;
+font-size: 34px;
+line-height: 41px;
+text-align: center;
+color: #263238;
         }
     }
 }
