--- a/components/Sales/sales.module.scss
+++ b/components/Sales/sales.module.scss
@@ -1,17 +1,55 @@
-.sales{
-    display: flex;
-    gap: 52px;
-    .leftSide{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        gap: 10px;
-
-        .salesImg{
-            background: #F4F5F8;
-            border-radius: 30px;
-            display: flex;
-            align-items: center;
-                    justify-content: center;
-        }
+.sales {
+  display: flex;
+  align-items: end;
+  gap: 52px;
+  margin: 80px 0;
+  .leftSide {
+    display: grid;
+    grid-template-columns: repeat(3, 180px);
+    gap: 10px;
+    .salesImg {
+      background: #f4f5f8;
+      border-radius: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 180px;
     }
+  }
+  .rightSide {
+    .h1 {
+      font-style: normal;
+      font-weight: 600;
+      font-size: 48px;
+      line-height: 57px;
+      color: #263238;
+    }
+    .parag{
+      font-style: normal;
+      font-weight: 500;
+      font-size: 22px;
+      line-height: 150%;
+      color: #263238;
+      margin: 20px 0;
+    }
+    .scnd{
+      font-style: normal;
+      font-weight: 500;
+      font-size: 22px;
+      line-height: 150%;
+      color: #263238;
+      margin: 20px 0;
+    }
+    button{
+      background: rgba(180, 33, 38, 0.1);
+border-radius: 33px;
+border: none;
+padding: 8px 14px;
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 17px;
+color: #B42126;
+    }
+  }
 }
