--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,6 +20,10 @@ body {
   max-width: 1200px;
   position: relative;
   margin: auto;
+  @media (max-width: 1200px) {
+  margin: auto 20px;
+    
+  }
 }
 
 @font-face {
@@ -34,6 +38,10 @@ body {
 
 .mySwiper {
   margin-bottom: 100px;
+  @media (max-width: 650px) {
+  margin-bottom: 50px;
+    
+  }
   .swiper-wrapper{
     padding: 50px 0;
   }
@@ -45,4 +53,9 @@ body {
     border-radius: 2px;
 
   }
+}
+
+
+a{
+  text-decoration: none;
 }
