--- a/components/Rating/rating.module.scss
+++ b/components/Rating/rating.module.scss
@@ -1,24 +1,35 @@
 .rating {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    margin: 40px 0px;
-    gap: 20px;
-    
-    .ratingType{
-        height: 180px;
-        border-radius: 30px;
-        background: #F4F5F8;
-        padding: 40px 40px;
-        text-align: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin: 40px 0px;
+  gap: 20px;
+  @media (max-width: 900px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .ratingType {
+    height: 180px;
+    border-radius: 30px;
+    background: #f4f5f8;
+    padding: 40px 40px;
+    text-align: center;
+    @media (max-width:650px) {
+        padding: 30px 30px;
 
-        .ratingName{
-            margin-bottom: 30px;
-            font-style: normal;
-font-weight: 700;
-font-size: 34px;
-line-height: 41px;
-text-align: center;
-color: #263238;
-        }
+      }
+    .ratingName {
+      margin-bottom: 30px;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 34px;
+      line-height: 41px;
+      text-align: center;
+      color: #263238;
+      @media (max-width:650px) {
+        font-size: 28px;
+        line-height: 35px;
+      margin-bottom: 15px;
+
+      }
     }
+  }
 }
