--- a/components/Services/services.module.scss
+++ b/components/Services/services.module.scss
@@ -1,12 +1,15 @@
 .h1 {
   text-align: center;
   margin: 80px 0px 60px 0;
+  @media (max-width: 750px) {
+    font-size: 25px;
+  }
 }
 
 .services {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
 
   .servicesDelivery {
     margin-block-end: 25px;
@@ -14,14 +17,13 @@
     border: 1px solid rgba(71, 93, 135, 0.1);
     border-radius: 40px;
 
-
     &:nth-of-type(odd) {
-        display: flex;
-      }
-      &:nth-of-type(even) {
-        display: flex;
-        flex-direction: row-reverse;
-      }
+      display: flex;
+    }
+    &:nth-of-type(even) {
+      display: flex;
+      flex-direction: row-reverse;
+    }
     .servicesImg {
       img {
         height: 100%;
@@ -33,6 +35,10 @@
       flex-direction: column;
       margin: auto;
       max-width: 390px;
+      @media (max-width: 900px) {
+        margin: auto 30px;
+      }
+      
 
       .inServicesName {
         font-style: normal;
@@ -40,6 +46,9 @@
         font-size: 24px;
         line-height: 120%;
         color: #263238;
+        @media (max-width: 750px) {
+          font-size: 18px;
+        }
       }
       .inServicesTitle {
         font-style: normal;
@@ -48,6 +57,11 @@
         line-height: 150%;
         color: #263238;
         margin: 20px 0;
+        @media (max-width: 750px) {
+          margin: 10px 0;
+          line-height: 100%;
+
+        }
       }
       .inServicesP {
         color: #21b430;
@@ -57,6 +71,13 @@
           font-size: 24px;
           line-height: 150%;
           color: #21b430;
+          @media (max-width: 750px) {
+            margin: 10px 0;
+          font-size: 16px;
+
+            line-height: 100%;
+  
+          }
         }
       }
     }
