--- a/components/Services/services.module.scss
+++ b/components/Services/services.module.scss
@@ -11,6 +11,14 @@
   flex-direction: column;
   flex-wrap: nowrap;
 
+  @media (max-width: 1250px) {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  @media (max-width: 1200px) {
+    margin: 0;
+  }
+
   .servicesDelivery {
     margin-block-end: 25px;
     background: #ffffff;
@@ -19,15 +27,36 @@
 
     &:nth-of-type(odd) {
       display: flex;
+
+      @media (max-width: 600px) {
+        flex-direction: column;
+      }
     }
     &:nth-of-type(even) {
       display: flex;
       flex-direction: row-reverse;
+
+      @media (max-width: 600px) {
+        flex-direction: column;
+      }
     }
     .servicesImg {
       img {
         height: 100%;
         width: 100%;
+      }
+
+      @media (max-width: 1090px) {
+        width: 500px;
+      }
+
+      @media (max-width: 960px) {
+        width: 450px;
+      }
+      
+      @media (max-width: 600px) {
+        width: 100%;
+        height: 200px;
       }
     }
     .servicesName {
@@ -35,10 +64,18 @@
       flex-direction: column;
       margin: auto;
       max-width: 390px;
+
       @media (max-width: 900px) {
         margin: auto 30px;
       }
       
+      @media (max-width: 600px) {
+        margin: 20px auto 40px auto;
+      }
+      
+      @media (max-width: 480px) {
+        margin: 20px 30px 40px;
+      }
 
       .inServicesName {
         font-style: normal;
@@ -46,8 +83,22 @@
         font-size: 24px;
         line-height: 120%;
         color: #263238;
+        @media (max-width: 800px) {
+          font-size: 22px;
+          line-height: normal;
+        }
         @media (max-width: 750px) {
           font-size: 18px;
+        }
+        @media (max-width: 660px) {
+          font-size: 16px;
+        }
+        @media (max-width: 600px) {
+          font-size: 24px;
+        }
+        
+        @media (max-width: 380px) {
+          font-size: 22px;
         }
       }
       .inServicesTitle {
@@ -60,7 +111,13 @@
         @media (max-width: 750px) {
           margin: 10px 0;
           line-height: 100%;
-
+        }
+        @media (max-width: 660px) {
+          font-size: 12px;
+          line-height: normal;
+        }
+        @media (max-width: 600px) {
+          font-size: 14px;
         }
       }
       .inServicesP {
@@ -71,12 +128,24 @@
           font-size: 24px;
           line-height: 150%;
           color: #21b430;
+          @media (max-width: 900px) {
+            font-size: 20px;
+            line-height: normal;
+          }
           @media (max-width: 750px) {
-            margin: 10px 0;
-          font-size: 16px;
-
+            margin: 10px 0 0 0;
+            font-size: 16px;
             line-height: 100%;
-  
+          }
+          @media (max-width: 660px) {
+            font-size: 14px;
+            line-height: normal;
+          }
+          @media (max-width: 600px) {
+            font-size: 20px;
+          }
+          @media (max-width: 380px) {
+            font-size: 18px;
           }
         }
       }
