--- a/components/Advantage/advantage.module.scss
+++ b/components/Advantage/advantage.module.scss
@@ -1,34 +1,72 @@
 .advantage {
-    display: grid;
-    grid-template: repeat(2, 1fr)/ repeat(2, 1fr);
-    gap: 20px;
-    margin: 20px 0;
-    
-    .advantageSquare {
-        border-radius: 30px;
-        padding: 30px;
-        background: hsl(225, 22%, 96%);
-        
-        .advantageName {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-            .titile{
-                font-style: normal;
-font-weight: 600;
-font-size: 24px;
-line-height: 29px;
-color: #263238;
-            }
-        }
-        .advantageTitle {
-            font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 150%;
-color: #263238;
+  display: grid;
+  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+  gap: 20px;
+  margin: 20px 0;
 
-        }
+  @media (max-width: 470px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .advantageSquare {
+    border-radius: 30px;
+    padding: 30px;
+    background: hsl(225, 22%, 96%);
+
+    @media (max-width: 670px) {
+      padding: 20px;
     }
+
+    @media (max-width: 520px) {
+      padding: 15px;
+    }
+
+    @media (max-width: 460px) {
+        padding: 30px;
+    }
+    
+    @media (max-width: 325px) {
+        padding: 25px;
+    }
+
+    .advantageName {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+      .titile {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 29px;
+        color: #263238;
+
+        @media (max-width: 600px) {
+          font-size: 22px;
+        }
+
+        @media (max-width: 560px) {
+          font-size: 20px;
+        }
+
+        @media (max-width: 495px) {
+          font-size: 18px;
+        }
+      }
+
+      img {
+        @media (max-width: 600px) {
+          width: 30px;
+          height: 30px;
+        }
+      }
+    }
+    .advantageTitle {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 150%;
+      color: #263238;
+    }
+  }
 }
