--- a/components/Rating/rating.module.scss
+++ b/components/Rating/rating.module.scss
@@ -6,16 +6,34 @@
   @media (max-width: 900px) {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  @media (max-width: 380px) {
+    gap: 15px;
+  }
   .ratingType {
     height: 180px;
     border-radius: 30px;
     background: #f4f5f8;
     padding: 40px 40px;
     text-align: center;
-    @media (max-width:650px) {
-        padding: 30px 30px;
+    @media (max-width: 650px) {
+      padding: 30px 30px;
+    }
 
-      }
+    @media (max-width: 430px) {
+      height: 170px;
+      padding: 25px 25px;
+    }
+
+    @media (max-width: 365px) {
+      height: 150px;
+      padding: 20px 20px;
+    }
+
+    @media (max-width: 330px) {
+      height: 130px;
+      padding: 15px 15px;
+    }
     .ratingName {
       margin-bottom: 30px;
       font-style: normal;
@@ -24,11 +42,33 @@
       line-height: 41px;
       text-align: center;
       color: #263238;
-      @media (max-width:650px) {
+      @media (max-width: 650px) {
         font-size: 28px;
         line-height: 35px;
-      margin-bottom: 15px;
+        margin-bottom: 15px;
+      }
 
+      @media (max-width: 365px) {
+        font-size: 25px;
+        line-height: 31px;
+        margin-bottom: 12px;
+      }
+
+      @media (max-width: 330px) {
+        font-size: 22px;
+        line-height: normal;
+        margin-bottom: 10px;
+      }
+    }
+
+    .ratingTitle {
+      @media (max-width: 365px) {
+        font-size: 15px;
+        line-height: normal;
+      }
+      
+      @media (max-width: 330px) {
+        font-size: 14px;
       }
     }
   }
