--- a/components/Sales/sales.module.scss
+++ b/components/Sales/sales.module.scss
@@ -12,24 +12,57 @@
     align-items: center;
   }
   .leftSide {
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 180px);
     gap: 10px;
-    @media (max-width: 550px) {
+    @media (max-width: 1050px) {
+      gap: 20px;
+    }
+    @media (max-width: 800px) {
+      gap: 10px;
+    }
+    @media (max-width: 610px) {
+      grid-template-columns: repeat(3, 170px);
+    }
+    @media (max-width: 570px) {
       grid-template-columns: repeat(3, 150px);
     }
-    @media (max-width: 500px) {
-      grid-template-columns: repeat(2, 150px);
+    @media (max-width: 510px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 365px) {
+      grid-template-columns: repeat(2, 140px);
+    }
+
+    @media (max-width: 330px) {
+      grid-template-columns: repeat(1, 1fr);
     }
     .salesImg {
+      width: 100%;
       background: #f4f5f8;
       border-radius: 30px;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 180px;
-      @media (max-width: 550px) {
+      @media (max-width: 570px) {
         height: 150px;
+      }
+
+      @media (max-width: 365px) {
+        height: 120px;
+
+        img {
+          width: 80%;
+        }
+      }
+
+      @media (max-width: 330px) {
+        height: 150px;
+        img {
+          width: 60%;
+        }
       }
     }
   }
