--- a/components/ServicesNew/services.module.scss
+++ b/components/ServicesNew/services.module.scss
@@ -10,15 +10,26 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  margin-bottom: 160px;
+  margin-bottom: 300px;
 
-  @media (max-width: 750px) {
-    margin-bottom: 350px;
+  @media (max-width: 1250px) {
+    margin-left: 20px;
+    margin-right: 20px;
   }
-  
+  @media (max-width: 1200px) {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  @media (max-width: 750px) {
+    margin-bottom: 250px;
+  }
   @media (max-width: 650px) {
     margin-bottom: 150px;
   }
+  @media (max-width: 383px) {
+    margin-bottom: 100px;
+  }
+
   .servicesDelivery {
     margin-block-end: 25px;
     background: #ffffff;
@@ -27,15 +38,36 @@
 
     &:nth-of-type(odd) {
       display: flex;
+
+      @media (max-width: 600px) {
+        flex-direction: column;
+      }
     }
     &:nth-of-type(even) {
       display: flex;
       flex-direction: row-reverse;
+
+      @media (max-width: 600px) {
+        flex-direction: column;
+      }
     }
     .servicesImg {
       img {
         height: 100%;
         width: 100%;
+      }
+
+      @media (max-width: 1090px) {
+        width: 500px;
+      }
+
+      @media (max-width: 960px) {
+        width: 450px;
+      }
+
+      @media (max-width: 600px) {
+        width: 100%;
+        height: 200px;
       }
     }
     .servicesName {
@@ -43,8 +75,17 @@
       flex-direction: column;
       margin: auto;
       max-width: 390px;
+
       @media (max-width: 900px) {
         margin: auto 30px;
+      }
+
+      @media (max-width: 600px) {
+        margin: 20px auto 40px auto;
+      }
+
+      @media (max-width: 480px) {
+        margin: 20px 30px 40px;
       }
 
       .inServicesName {
@@ -53,8 +94,22 @@
         font-size: 24px;
         line-height: 120%;
         color: #263238;
+        @media (max-width: 800px) {
+          font-size: 22px;
+          line-height: normal;
+        }
         @media (max-width: 750px) {
           font-size: 18px;
+        }
+        @media (max-width: 660px) {
+          font-size: 16px;
+        }
+        @media (max-width: 600px) {
+          font-size: 24px;
+        }
+
+        @media (max-width: 380px) {
+          font-size: 22px;
         }
       }
       .inServicesTitle {
@@ -68,6 +123,13 @@
           margin: 10px 0;
           line-height: 100%;
         }
+        @media (max-width: 660px) {
+          font-size: 12px;
+          line-height: normal;
+        }
+        @media (max-width: 600px) {
+          font-size: 14px;
+        }
       }
       .inServicesP {
         color: #21b430;
@@ -77,11 +139,24 @@
           font-size: 24px;
           line-height: 150%;
           color: #21b430;
+          @media (max-width: 900px) {
+            font-size: 20px;
+            line-height: normal;
+          }
           @media (max-width: 750px) {
-            margin: 10px 0;
+            margin: 10px 0 0 0;
             font-size: 16px;
-
             line-height: 100%;
+          }
+          @media (max-width: 660px) {
+            font-size: 14px;
+            line-height: normal;
+          }
+          @media (max-width: 600px) {
+            font-size: 20px;
+          }
+          @media (max-width: 380px) {
+            font-size: 18px;
           }
         }
       }
