--- a/components/Slider/slider.module.scss
+++ b/components/Slider/slider.module.scss
@@ -1,9 +1,31 @@
+.swiperWrap {
+  @media (max-width: 1240px) {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  @media (max-width: 1200px) {
+    margin: 0;
+  }
+}
+
 .imagePart {
   .firstImage {
     display: flex;
     gap: 24px;
     align-items: center;
     margin-bottom: 20px;
+
+    img {
+      @media (max-width: 420px) {
+        width: 120px;
+        height: 120px;
+      }
+      @media (max-width: 340px) {
+        width: 100px;
+        height: 100px;
+      }
+    }
     .myPart {
       h3 {
         margin-bottom: 14px;
@@ -57,6 +79,20 @@
     display: flex;
     align-items: center;
     margin-bottom: 60px;
+
+    @media (max-width: 768px) {
+      margin-bottom: 20px;
+      background-size: 140px;
+    }
+
+    @media (max-width: 650px) {
+      margin-bottom: 0px;
+      background-size: 120px;
+    }
+
+    @media (max-width: 500px) {
+      background-size: 100px 120px;
+    }
     h3 {
       font-style: normal;
       font-weight: 600;
@@ -68,9 +104,15 @@
         font-size: 38px;
         line-height: 47px;
       }
+      @media (max-width: 768px) {
+        font-size: 35px !important;
+        line-height: normal;
+      }
       @media (max-width: 650px) {
-        font-size: 38px;
-        line-height: 47px;
+        font-size: 26px !important;
+      }
+      @media (max-width: 500px) {
+        font-size: 24px !important;
       }
     }
   }
@@ -80,8 +122,7 @@
   text-align: center;
   margin-bottom: 200px;
   @media (max-width: 650px) {
-  margin-bottom: 110px;
-    
+    margin-bottom: 110px;
   }
   button {
     background: #b42126;
