--- a/components/layout/Footer/footer.module.scss
+++ b/components/layout/Footer/footer.module.scss
@@ -1,12 +1,31 @@
 .backGroun {
   background: #202020;
-  
+
   .wrapFooter {
-    padding-top: 185px;
+    position: relative;
     display: flex;
     justify-content: space-between;
+    gap: 20px 30px;
+    padding-top: 220px;
     color: #ffff;
-    position: relative;
+
+    @media (max-width: 1200px) {
+      padding-top: 285px;
+    }
+
+    @media (max-width: 860px) {
+      flex-wrap: wrap;
+      padding-bottom: 50px;
+    }
+
+    @media (max-width: 540px) {
+      padding-top: 350px;
+    }
+
+    @media (max-width: 500px) {
+      flex-direction: column;
+      gap: 40px 0;
+    }
 
     .firstPart {
       max-width: 384px;
@@ -23,6 +42,10 @@
         align-items: center;
         gap: 5px;
         padding: 30px 0 75px 0;
+
+        @media (max-width: 500px) {
+          padding-bottom: 35px;
+        }
         p {
           font-style: normal;
           font-weight: 600;
