--- a/components/layout/Header/header1a.module.scss
+++ b/components/layout/Header/header1a.module.scss
@@ -29,7 +29,7 @@
 
 .backgroundImage {
   position: absolute !important;
-  bottom: 355px;
+  bottom: 380px;
   background: radial-gradient(
       71.82% 147.35% at 6.9% 17.66%,
       rgba(248, 54, 0, 0.15) 0%,
@@ -50,6 +50,38 @@
   padding-bottom: 3.5rem;
   border-radius: 4rem;
   margin: 0 20px;
+
+  @media (max-width: 1150px) {
+    bottom: 430px;
+  }
+
+  @media (max-width: 860px) {
+    bottom: 780px;
+  }
+
+  @media (max-width: 650px) {
+    bottom: 710px;
+  }
+
+  @media (max-width: 540px) {
+    bottom: 700px;
+  }
+  
+  @media (max-width: 500px) {
+    bottom: 910px;
+  }
+
+  @media (max-width: 400px) {
+    bottom: 960px;
+  }
+  
+  @media (max-width: 360px) {
+    bottom: 965px;
+  }
+  
+  @media (max-width: 348px) {
+    bottom: 950px;
+  }
 
   &::before {
     content: "";
@@ -88,9 +120,42 @@
     margin-top: 70px;
     padding: 0 27px;
     align-items: center;
+    gap: 30px;
+
+    @media (max-width: 840px) {
+      gap: 20px;
+    }
+
     @media (max-width: 650px) {
-    padding: 0 5px;
-      
+      padding: 0 5px;
+    }
+
+    @media (max-width: 600px) {
+      gap: 15px;
+    }
+
+    @media (max-width: 540px) {
+      flex-direction: column-reverse;
+      gap: 30px;
+    }
+
+    @media (max-width: 432px) {
+      margin-top: 50px;
+      text-align: center;
+    }
+    
+    @media (max-width: 400px) {
+      gap: 15px;
+    }
+    
+    @media (max-width: 383px) {
+      margin-top: 25px;
+      margin-bottom: -25px;
+    }
+    
+    @media (max-width: 330px) {
+      padding: 0;
+      margin-bottom: -30px;
     }
 
     .ssss {
@@ -103,9 +168,45 @@
         font-size: 40px;
         line-height: 57px;
         color: #263238;
-        @media (max-width:700px) {
+        @media (max-width: 1150px) {
+          font-size: 36px;
+          line-height: normal;
+        }
+        @media (max-width: 1112px) {
+          font-size: 32px;
+        }
+        @media (max-width: 840px) {
+          font-size: 30px;
+          line-height: normal;
+        }
+        @media (max-width: 700px) {
           font-size: 25px;
+          line-height: 33px;
+        }
+        @media (max-width: 600px) {
+          font-size: 22px;
+          line-height: 30px;
+        }
+        @media (max-width: 550px) {
+          font-size: 20px;
+          line-height: 30px;
+        }
+        @media (max-width: 540px) {
+          font-size: 24px;
           line-height: 37px;
+        }
+        @media (max-width: 432px) {
+          font-size: 20px;
+          line-height: 30px;
+        }
+        @media (max-width: 400px) {
+          font-size: 20px;
+          line-height: 28px;
+        }
+       
+        @media (max-width: 482px) {
+          font-size: 19px;
+          line-height: 25px;
         }
       }
       .insta {
@@ -115,6 +216,7 @@
         border-radius: 33px;
         width: 242px;
         justify-content: center;
+
         p {
           font-style: normal;
           font-weight: 600;
@@ -122,9 +224,43 @@
           line-height: 150%;
           color: #263238;
         }
+
+        @media (max-width: 740px) {
+          width: 200px;
+
+          p {
+            font-size: 20px;
+          }
+        }
+        @media (max-width: 550px) {
+          width: 190px;
+
+          p {
+            font-size: 18px;
+          }
+        }
+
+        @media (max-width: 432px) {
+          margin-left: auto;
+          margin-right: auto;
+        }
+        
+        @media (max-width: 382px) {
+          width: 180px;
+          height: 40px;
+
+          p {
+            font-size: 16px;
+          }
+
+          svg {
+            width: 35px;
+          }
+        }
       }
     }
     .firstPart {
+      width: 100%;
       max-width: 600px;
 
       p {
@@ -133,9 +269,15 @@
         font-size: 18px;
         line-height: 150%;
         color: #263238;
-        @media (max-width:700px) {
+        @media (max-width: 840px) {
+          line-height: normal;
+        }
+        @media (max-width: 740px) {
+          font-size: 16px;
+        }
+        @media (max-width: 700px) {
           font-size: 15px;
-          line-height: 120%;
+          line-height: 135%;
         }
       }
       button {
