--- a/components/layout/Header/header.module.scss
+++ b/components/layout/Header/header.module.scss
@@ -357,10 +357,15 @@
         text-transform: uppercase;
 
         margin-top: 20px;
+        @media (max-width: 650px) {
+          justify-content: center;
+          width: 100%;
+         margin-top: 35px;
+ 
+         }
       }
       .regularBTn {
         display: flex;
-        padding: 13px 30px;
         background: #b42126;
         border-radius: 48px;
         text-transform: uppercase;
@@ -369,7 +374,12 @@
         color: white;
         padding: 13px 30px;
         margin-top: 20px;
+        @media (max-width: 650px) {
+         justify-content: center;
+         width: 100%;
+        margin-top: 35px;
 
+        }
         @media (max-width: 370px) {
           font-size: 12px;
           padding: 13px 28px;
