--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -41,11 +41,11 @@ body {
   @media (max-width: 1200px) {
     margin-bottom: 100px !important;
   }
-  
+
   @media (max-width: 650px) {
     margin-bottom: 70px !important;
   }
-  
+
   @media (max-width: 380px) {
     margin-bottom: 30px !important;
   }
@@ -73,21 +73,19 @@ a {
   text-decoration: none;
 }
 
-
-
 .container {
   // height: 100vh;/
   overflow-y: hidden;
   color: beige;
 }
 
-nav {  
+nav {
   display: flex;
   justify-content: space-between;
 
   .logo-container {
     overflow-y: hidden;
-    
+
     h1 {
       text-transform: uppercase;
       font-size: 15px;
@@ -100,7 +98,7 @@ nav {
     div {
       text-transform: uppercase;
       font-size: 13px;
-  
+
       &:hover {
         cursor: pointer;
       }
@@ -138,12 +136,12 @@ nav {
   ul {
     list-style: none;
     margin-top: 40px;
-    
+
     li {
       margin: 20px 0;
-      overflow-y: hidden;   
-      user-select: none;   
-      
+      overflow-y: hidden;
+      user-select: none;
+
       div {
         text-align: center;
         text-transform: capitalize;
@@ -171,37 +169,35 @@ nav {
   }
 }
 
-.img-container {  
+.img-container {
   display: flex;
   justify-content: center;
   margin-top: 50px;
   width: 100%;
-  
-    img {  
-      height: 700px;
-      pointer-events: none;
-    }
+
+  img {
+    height: 700px;
+    pointer-events: none;
+  }
 }
 
-
-.link{
+.link {
   color: #fff;
 }
 
-
-div.c{
+div.c {
   position: relative;
 }
-input{
+input {
   position: absolute;
   left: 0;
   top: 0;
   height: 100%;
   width: 100%;
-  opacity:0;
+  opacity: 0;
   visibility: 0;
 }
-.titleNEw{
+.titleNEw {
   background: #f4f5f8;
 
   padding: 30px 50px;
@@ -209,7 +205,7 @@ input{
   align-items: center;
   position: relative;
 
-  label{
+  label {
     font-style: normal;
     font-weight: 600;
     font-size: 24px;
@@ -223,32 +219,97 @@ input{
       line-height: 23px;
     }
   }
-
 }
-label::before{
-  content:"+";
+label::before {
+  content: "+";
   display: inline-block;
 }
-label{
+label {
   cursor: pointer;
   position: relative;
   display: flex;
   align-items: center;
 }
-div.p{
-  max-height:0px;
+div.p {
+  max-height: 0px;
   overflow: hidden;
-  transition:max-height 0.5s;
+  transition: max-height 0.5s;
   background: #f4f5f8;
-
 }
 div.p p {
-  padding:2em;
+  padding: 2em;
 }
 
-input:checked ~ h1 ~ div.p{
-  max-height:150px;
+input:checked ~ h1 ~ div.p {
+  max-height: 150px;
 }
-a{
-  color:steelblue;
+a {
+  color: steelblue;
+}
+
+
+
+
+
+
+div.a {
+  position: relative;
+}
+input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  visibility: 0;
+}
+.titleNEw {
+  background: #f4f5f8;
+
+  padding: 30px 50px;
+  display: flex;
+  align-items: center;
+  position: relative;
+
+  label {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    color: #263238;
+    gap: 20px;
+    @media (max-width: 600px) {
+      font-size: 18px;
+      line-height: 23px;
+    }
+  }
+}
+label::before {
+  content: "+";
+  display: inline-block;
+}
+label {
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+div.pc {
+  max-height: 0px;
+  overflow: hidden;
+  transition: max-height 0.5s;
+  background: #f4f5f8;
+}
+div.pc p {
+  padding: 2em;
+}
+
+input:checked ~ h1 ~ div.pc {
+  max-height: 100%;
+}
+a {
+  color: steelblue;
 }
